fixed format align

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -69,7 +69,7 @@ header nav ul li a {
     text-decoration: none;
     color: #fff;
     font-family: 'Roboto';
-    padding: 10px 15px;
+    /* padding: 10px 15px; */
     font-size: 16px;
     text-transform: uppercase;
     position: relative;
